# v2_playground

./: .gitignore  CMakeLists.txt  README.md  mavlink.capnp  mavlink.fbs  mavlink.lcm  mavlink.proto  test.cpp  test_capnp_attitude.txt  test_capnp_attitude_subtyped.txt  test_cbor.py  test_cdr.cpp  test_lcm.vala  test_msgpack_attitude_subtyped.json  test_msgpack_essentials_v2.json  test_pb2_attitude.txt  test_pb2_essentials.txt
mavlink-to-capnp/: capnp.jinja2  common.capnp  common_annotated.capnp  mavlink_to_capnp.py
pb_tools/: mavlink_pb2.py
testdata/: capnp_attitude_subtyped.txt  capnp_essentials.txt  capnp_essentials_v2.txt  msgpack_attitude.json  msgpack_essentials.json  pb2_attitude_subtyped.txt  pb2_essentials_v2.txt
